TF pretrained example

--- a/examples/deeplearning/notebooks/deeplearning_tensorflow_cat_dog_mouse_lenet.ipynb
+++ b/examples/deeplearning/notebooks/deeplearning_tensorflow_cat_dog_mouse_lenet.ipynb
@@ -79,7 +79,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -101,7 +101,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -173,7 +173,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "scrolled": true
@@ -205,7 +205,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -235,7 +235,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true,
     "scrolled": true
@@ -302,7 +302,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -332,7 +332,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "name": "stdout",
@@ -405,11 +405,26 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "model = H2ODeepWaterEstimator(epochs=500, network = \"lenet\", backend=\"tensorflow\")\n",
+    "model.train(x=[0],y=1, training_frame=frame)\n",
+    "model.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = H2ODeepWaterEstimator(epochs=100, backend=\"tensorflow\",\n",
+    "                              image_shape=[28,28],\n",
+    "                              network=\"user\",\n",
+    "                              network_definition_file=PATH + \"/examples/deeplearning/notebooks/pretrained/lenet_28x28x3_3.meta\",\n",
+    "                              network_parameters_file=PATH + \"/examples/deeplearning/notebooks/pretrained/lenet-100epochs\")\n",
     "model.train(x=[0],y=1, training_frame=frame)\n",
     "model.show()"
    ]
@@ -465,7 +480,7 @@
       ]
      },
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     },
     {
      "data": {
@@ -561,7 +576,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -582,7 +597,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
+    "collapsed": true,
     "deletable": true,
     "editable": true
    },
@@ -746,7 +761,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
